--- a/code/influence_on_citations/regression.ipynb
+++ b/code/influence_on_citations/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import statsmodels.api as sm\n",
     "\n",
-    "data = pd.read_csv(\"data/data_export.csv\")\n",
+    "data = pd.read_csv(\"../../data/data_export.csv\")\n",
     "\n",
     "data[\"cited_by_count\"] = pd.to_numeric(data[\"cited_by_count\"], errors=\"coerce\")\n",
     "data = data.dropna(subset=[\"cited_by_count\", \"author_h_index\", \"journal_h_index\", \"institution_h_index\"])"
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
