changed transformers to include max h-index per paper for author/institute

--- a/code/h_index/process_h_indices.ipynb
+++ b/code/h_index/process_h_indices.ipynb
@@ -33,20 +33,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_18778/1296678931.py:16: SettingWithCopyWarning: \n",
+      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_4267/1296678931.py:16: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_data['mention_count'] = filtered_data['abstract'].str.count(r'\\bsoccer\\b|\\bfootball\\b', flags=re.IGNORECASE)\n",
-      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_18778/1296678931.py:19: SettingWithCopyWarning: \n",
+      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_4267/1296678931.py:19: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -65,13 +65,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_18778/1296678931.py:29: SettingWithCopyWarning: \n",
+      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_4267/1296678931.py:29: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  filtered_data['concepts_match'] = filtered_data['concepts'].apply(filter_concepts)\n",
-      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_18778/1296678931.py:31: SettingWithCopyWarning: \n",
+      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_4267/1296678931.py:31: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -122,14 +122,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 8/8 [00:17<00:00,  2.17s/it]\n"
+      "100%|██████████| 8/8 [00:17<00:00,  2.15s/it]\n"
      ]
     }
    ],
@@ -166,7 +166,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['id', 'doi', 'title', 'display_name', 'relevance_score',\n",
+       "       'publication_year', 'publication_date', 'ids', 'language',\n",
+       "       'primary_location',\n",
+       "       ...\n",
+       "       'institutions', 'countries', 'journal_name', 'avg_author_h_index',\n",
+       "       'max_author_h_index', 'journal_h_index', 'avg_institution_h_index',\n",
+       "       'max_institution_h_index', 'num_authors', 'num_institutions'],\n",
+       "      dtype='object', length=1766)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,8 +201,9 @@
     "    \"id\", \"doi\", \"title\", \"relevance_score\", \"publication_year\", \"publication_date\",\n",
     "    \"language\", \"type\", \"type_crossref\", \"indexed_in\", \"countries_distinct_count\",\n",
     "    \"referenced_works_count\", \"cited_by_count\", \"predicted_category\", \"authors\", \"institutions\",\n",
-    "    \"countries\", \"journal_name\", \"author_h_index\", \"journal_h_index\", \"institution_h_index\",\n",
-    "    \"num_authors\", \"num_institutions\"\n",
+    "    \"countries\", \"journal_name\", 'avg_author_h_index',\n",
+    "       'max_author_h_index', 'journal_h_index', 'avg_institution_h_index',\n",
+    "       'max_institution_h_index', 'num_authors', 'num_institutions'\n",
     "]\n",
     "\n",
     "final_df_filtered = final_df[columns_to_export]\n",
@@ -221,19 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_18778/570584888.py:3: SettingWithCopyWarning: \n",
+      "/var/folders/66/n03tnlzs0fd6bhjtzdb8ztwm0000gn/T/ipykernel_4267/2003510990.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  author_data[\"cumulative_h_index\"] = author_data[\"author_h_index\"].cummax()\n"
+      "  author_data[\"cumulative_h_index\"] = author_data[\"avg_author_h_index\"].cummax()\n"
      ]
     },
     {
@@ -250,7 +278,7 @@
    "source": [
     "author_name = \"Filipe Manuel Clemente\"\n",
     "author_data = final_df[final_df[\"authors\"].apply(lambda x: author_name in x)]\n",
-    "author_data[\"cumulative_h_index\"] = author_data[\"author_h_index\"].cummax()\n",
+    "author_data[\"cumulative_h_index\"] = author_data[\"avg_author_h_index\"].cummax()\n",
     "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.plot(author_data[\"publication_date\"], author_data[\"cumulative_h_index\"], label=f\"Cumulative H-index of {author_name}\", marker=\"o\")\n",
