updated the transfomers for 5 years back

--- a/code/h_index/process_h_indices.ipynb
+++ b/code/h_index/process_h_indices.ipynb
@@ -159,7 +159,7 @@
     "    return transformed_data\n",
     "\n",
     "# path to the historical data folder (files like new_papers_to_annotate_2000_to_2004.csv)\n",
-    "data_folder = \"data\"\n",
+    "data_folder = \"data_all_years\"\n",
     "\n",
     "final_df = preprocess_and_transform(data_folder, filtered_data)"
    ]
@@ -201,9 +201,12 @@
     "    \"id\", \"doi\", \"title\", \"relevance_score\", \"publication_year\", \"publication_date\",\n",
     "    \"language\", \"type\", \"type_crossref\", \"indexed_in\", \"countries_distinct_count\",\n",
     "    \"referenced_works_count\", \"cited_by_count\", \"predicted_category\", \"authors\", \"institutions\",\n",
-    "    \"countries\", \"journal_name\", 'avg_author_h_index',\n",
-    "       'max_author_h_index', 'journal_h_index', 'avg_institution_h_index',\n",
-    "       'max_institution_h_index', 'num_authors', 'num_institutions'\n",
+    "    \"countries\", \"journal_name\", 'avg_author_h_index', 'max_author_h_index', 'avg_institution_h_index',\n",
+    "       'max_institution_h_index', 'journal_h_index',\n",
+    "       'avg_author_citations_past_5_years', 'max_author_citations_past_5_years',\n",
+    "       'avg_institution_citations_past_5_years',\n",
+    "       'max_institution_citations_past_5_years', 'num_authors',\n",
+    "       'num_institutions'\n",
     "]\n",
     "\n",
     "final_df_filtered = final_df[columns_to_export]\n",
