cleaned up plots, added horizontal grids etc

--- a/code/influence_on_citations/regression.ipynb
+++ b/code/influence_on_citations/regression.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -149,7 +149,7 @@
     "plt.legend(title='Feature', loc='upper right', fontsize=11)\n",
     "plt.ylim(0, 1.0)\n",
     "plt.tight_layout()\n",
-    "plt.savefig(\"feature_importance_random_forest.png\", dpi=400)\n",
+    "plt.savefig(\"feature_importance_random_forest.jpg\", dpi=400)\n",
     "plt.show()"
    ]
   },
