--- a/code/EDA/paper_trends.ipynb
+++ b/code/EDA/paper_trends.ipynb
@@ -337,7 +337,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# me\n",
+    "data.head()"
+   ]
   }
  ],
  "metadata": {
