--- a/code/kappa_score/KAPPA_score.ipynb
+++ b/code/kappa_score/KAPPA_score.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,48 +14,16 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "\n",
-    "jason = pd.read_csv(\"manual/annotations_jason.csv\", sep=\";\")\n",
-    "franek = pd.read_csv(\"manual/annotations_franek.csv\", sep=\";\")\n",
-    "\n",
-    "albert = pd.read_csv(\"manual/annotations_albert.csv\", sep=\";\")\n",
-    "jonathan = pd.read_csv(\"manual/annotations_jonathan.csv\", sep=\";\") \n",
-    "data = pd.read_csv(\"../data/data_export.csv\", sep=\",\")"
+    "jason = pd.read_csv(\"../../data/manual_annotations/annotations_jason.csv\", sep=\";\")\n",
+    "franek = pd.read_csv(\"../../data/manual_annotations/annotations_franek.csv\", sep=\";\")\n",
+    "albert = pd.read_csv(\"../../data/manual_annotations/annotations_albert.csv\", sep=\";\")\n",
+    "jonathan = pd.read_csv(\"../../data/manual_annotations/annotations_jonathan.csv\", sep=\";\")\n",
+    "data = pd.read_csv(\"../../data/data_export.csv\", sep=\",\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['id', 'doi', 'title', 'relevance_score', 'publication_year',\n",
-       "       'publication_date', 'language', 'type', 'type_crossref', 'indexed_in',\n",
-       "       'countries_distinct_count', 'referenced_works_count', 'cited_by_count',\n",
-       "       'predicted_category', 'authors', 'institutions', 'countries',\n",
-       "       'journal_name', 'avg_author_h_index', 'max_author_h_index',\n",
-       "       'avg_institution_h_index', 'max_institution_h_index', 'journal_h_index',\n",
-       "       'avg_author_citations_past_5_years',\n",
-       "       'max_author_citations_past_5_years',\n",
-       "       'avg_institution_citations_past_5_years',\n",
-       "       'max_institution_citations_past_5_years', 'num_authors',\n",
-       "       'num_institutions'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -85,12 +53,20 @@
     }
    ],
    "source": [
+    "# should print 15033\n",
     "print(f\"Number of rows in data: {data.shape[0]}\")"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kappa score calculation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -122,12 +98,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Preparing for Fig. 4"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Merge all four annotators by annotation_id\n",
     "df_all = pd.concat([\n",
     "    pd.merge(\n",
     "        jason[['annotation_id','category']].rename(columns={'category':'cat_jason'}),\n",
@@ -198,24 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of rows in data: 15033\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f\"Number of rows in data: {combined_predicted.shape[0]}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +224,7 @@
     "    differences.append(pred_props.get(cat, 0) - (min_prop + max_prop) / 2)\n",
     "\n",
     "x = np.arange(len(all_cats))\n",
-    "width = 0.35  # the width of the bars\n",
+    "width = 0.35 \n",
     "\n",
     "fig, ax = plt.subplots(figsize=(12, 8))\n",
     "\n",
@@ -297,7 +262,7 @@
     "        ax.annotate(\n",
     "            f'{diff_percent:.2f}%',\n",
     "            xy=(x[i], max(pred_vals[i], manual_max_vals[i]) + 0.01),\n",
-    "            xytext=(0, 3),  # 3 points vertical offset\n",
+    "            xytext=(0, 3),  \n",
     "            textcoords='offset points',\n",
     "            ha='center',\n",
     "            va='bottom',\n",
@@ -308,119 +273,6 @@
     "plt.tight_layout()\n",
     "plt.savefig(f\"kappa.jpg\", dpi=400)\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Predicted</th>\n",
-       "      <th>Manual Mid</th>\n",
-       "      <th>Difference</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Innovative Technologies</td>\n",
-       "      <td>13.88%</td>\n",
-       "      <td>11.00%</td>\n",
-       "      <td>2.88%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Medical / Injuries</td>\n",
-       "      <td>17.12%</td>\n",
-       "      <td>14.50%</td>\n",
-       "      <td>2.62%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Other</td>\n",
-       "      <td>6.80%</td>\n",
-       "      <td>8.50%</td>\n",
-       "      <td>-1.70%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Physical Attributes</td>\n",
-       "      <td>36.61%</td>\n",
-       "      <td>38.50%</td>\n",
-       "      <td>-1.89%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Psychology</td>\n",
-       "      <td>6.71%</td>\n",
-       "      <td>8.00%</td>\n",
-       "      <td>-1.29%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Scouting / Finance</td>\n",
-       "      <td>12.57%</td>\n",
-       "      <td>5.00%</td>\n",
-       "      <td>7.57%</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Tactics analysis</td>\n",
-       "      <td>6.31%</td>\n",
-       "      <td>8.50%</td>\n",
-       "      <td>-2.19%</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  Category Predicted Manual Mid Difference\n",
-       "0  Innovative Technologies    13.88%     11.00%      2.88%\n",
-       "1       Medical / Injuries    17.12%     14.50%      2.62%\n",
-       "2                    Other     6.80%      8.50%     -1.70%\n",
-       "3      Physical Attributes    36.61%     38.50%     -1.89%\n",
-       "4               Psychology     6.71%      8.00%     -1.29%\n",
-       "5       Scouting / Finance    12.57%      5.00%      7.57%\n",
-       "6         Tactics analysis     6.31%      8.50%     -2.19%"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "# Create a table using pandas\n",
-    "data = {\n",
-    "    'Category': all_cats,\n",
-    "    'Predicted': [f\"{val:.2%}\" for val in pred_vals],\n",
-    "    'Manual Mid': [f\"{val:.2%}\" for val in manual_mid_vals],\n",
-    "    'Difference': [f\"{val*100:.2f}%\" for val in differences]\n",
-    "}\n",
-    "df = pd.DataFrame(data)\n",
-    "display(df)\n"
    ]
   },
   {
