added r2 scores for random forest

--- a/code/regression/random_forest.ipynb
+++ b/code/regression/random_forest.ipynb
@@ -10,7 +10,6 @@
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import statsmodels.api as sm\n",
@@ -18,6 +17,7 @@
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.inspection import permutation_importance\n",
     "from sklearn.feature_selection import RFE\n",
+    "from sklearn.metrics import r2_score\n",
     "import seaborn as sns\n",
     "from datetime import datetime\n",
     "\n",
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,6 +144,7 @@
     "\n",
     "\n",
     "importance_data = []\n",
+    "r2_scores = []\n",
     "\n",
     "categories = data['predicted_category'].unique()\n",
     "for category in categories:\n",
@@ -161,6 +162,11 @@
     "    X_train, X_test, y_train, y_test = train_test_split(X_selected, y, test_size=0.2, random_state=42, shuffle=True)\n",
     "    rf_selected = RandomForestRegressor(random_state=42)\n",
     "    rf_selected.fit(X_train, y_train)\n",
+    "    y_pred = rf_selected.predict(X_test)\n",
+    "    r2 = r2_score(y_test, y_pred)\n",
+    "\n",
+    "    # Save results for this category\n",
+    "    r2_scores.append({'Category': category, 'R^2': r2})\n",
     "\n",
     "    perm_importance = permutation_importance(rf_selected, X_test, y_test, random_state=42, n_repeats=100)\n",
     "    importance_values = perm_importance.importances_mean\n",
@@ -214,221 +220,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Months Since Publication</th>\n",
-       "      <th>Log Journal H-Index</th>\n",
-       "      <th>Log Avg Institution Citations (Past 5 years)</th>\n",
-       "      <th>Log Avg Author Citations (Past 5 years)</th>\n",
-       "      <th>Log Max Author Citations (Past 5 years)</th>\n",
-       "      <th>Log Avg Institution H-Index</th>\n",
-       "      <th>Log Max Institution H-Index</th>\n",
-       "      <th>Log Max Institution Citations (Past 5 years)</th>\n",
-       "      <th>Total Importance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Physical Attributes</td>\n",
-       "      <td>0.454455</td>\n",
-       "      <td>0.313227</td>\n",
-       "      <td>0.036041</td>\n",
-       "      <td>0.113681</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.019282</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.936686</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Psychology</td>\n",
-       "      <td>0.427643</td>\n",
-       "      <td>0.263488</td>\n",
-       "      <td>0.065507</td>\n",
-       "      <td>0.075637</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.027846</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.860121</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Tactics analysis</td>\n",
-       "      <td>0.387995</td>\n",
-       "      <td>0.154423</td>\n",
-       "      <td>0.164691</td>\n",
-       "      <td>0.149163</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.013119</td>\n",
-       "      <td>0.843154</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Scouting / Finance</td>\n",
-       "      <td>0.313739</td>\n",
-       "      <td>0.162483</td>\n",
-       "      <td>0.110754</td>\n",
-       "      <td>0.105816</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.018250</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.711041</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Other</td>\n",
-       "      <td>0.254278</td>\n",
-       "      <td>0.072193</td>\n",
-       "      <td>0.170440</td>\n",
-       "      <td>0.042977</td>\n",
-       "      <td>0.093625</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.633514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Medical / Injuries</td>\n",
-       "      <td>0.228229</td>\n",
-       "      <td>0.203014</td>\n",
-       "      <td>0.051382</td>\n",
-       "      <td>0.118927</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.004664</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.606217</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Innovative Technologies</td>\n",
-       "      <td>0.173453</td>\n",
-       "      <td>0.088910</td>\n",
-       "      <td>0.054105</td>\n",
-       "      <td>0.025259</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>-0.010112</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.331614</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                  Category  Months Since Publication  Log Journal H-Index  \\\n",
-       "0      Physical Attributes                  0.454455             0.313227   \n",
-       "6               Psychology                  0.427643             0.263488   \n",
-       "4         Tactics analysis                  0.387995             0.154423   \n",
-       "2       Scouting / Finance                  0.313739             0.162483   \n",
-       "3                    Other                  0.254278             0.072193   \n",
-       "5       Medical / Injuries                  0.228229             0.203014   \n",
-       "1  Innovative Technologies                  0.173453             0.088910   \n",
-       "\n",
-       "   Log Avg Institution Citations (Past 5 years)  \\\n",
-       "0                                      0.036041   \n",
-       "6                                      0.065507   \n",
-       "4                                      0.164691   \n",
-       "2                                      0.110754   \n",
-       "3                                      0.170440   \n",
-       "5                                      0.051382   \n",
-       "1                                      0.054105   \n",
-       "\n",
-       "   Log Avg Author Citations (Past 5 years)  \\\n",
-       "0                                 0.113681   \n",
-       "6                                 0.075637   \n",
-       "4                                 0.149163   \n",
-       "2                                 0.105816   \n",
-       "3                                 0.042977   \n",
-       "5                                 0.118927   \n",
-       "1                                 0.025259   \n",
-       "\n",
-       "   Log Max Author Citations (Past 5 years)  Log Avg Institution H-Index  \\\n",
-       "0                                      NaN                     0.019282   \n",
-       "6                                      NaN                          NaN   \n",
-       "4                                      NaN                          NaN   \n",
-       "2                                      NaN                     0.018250   \n",
-       "3                                 0.093625                          NaN   \n",
-       "5                                      NaN                     0.004664   \n",
-       "1                                      NaN                    -0.010112   \n",
-       "\n",
-       "   Log Max Institution H-Index  Log Max Institution Citations (Past 5 years)  \\\n",
-       "0                          NaN                                           NaN   \n",
-       "6                     0.027846                                           NaN   \n",
-       "4                          NaN                                     -0.013119   \n",
-       "2                          NaN                                           NaN   \n",
-       "3                          NaN                                           NaN   \n",
-       "5                          NaN                                           NaN   \n",
-       "1                          NaN                                           NaN   \n",
-       "\n",
-       "   Total Importance  \n",
-       "0          0.936686  \n",
-       "6          0.860121  \n",
-       "4          0.843154  \n",
-       "2          0.711041  \n",
-       "3          0.633514  \n",
-       "5          0.606217  \n",
-       "1          0.331614  "
+       "[{'Category': 'Physical Attributes', 'R^2': 0.5784078129731915},\n",
+       " {'Category': 'Innovative Technologies', 'R^2': 0.302155043142995},\n",
+       " {'Category': 'Scouting / Finance', 'R^2': 0.5197549148204874},\n",
+       " {'Category': 'Other', 'R^2': 0.44132274360380386},\n",
+       " {'Category': 'Tactics analysis', 'R^2': 0.6377821781576152},\n",
+       " {'Category': 'Medical / Injuries', 'R^2': 0.3817756169638047},\n",
+       " {'Category': 'Psychology', 'R^2': 0.5253564942968973}]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "importance_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "R^2 Score: 0.5461700777681735\n"
-     ]
-    }
-   ],
-   "source": [
-    "from sklearn.metrics import r2_score\n",
-    "\n",
-    "y_pred = rf_selected.predict(X_test)\n",
-    "print(\"R^2 Score:\", r2_score(y_test, y_pred))\n"
+    "r2_scores"
    ]
   },
   {
