Enhance network graph analysis by consolidating multiple CSV files and filtering data based on language and specific mentions

--- a/code/network_analysis/network_graph.ipynb
+++ b/code/network_analysis/network_graph.ipynb
@@ -19,9 +19,45 @@
     "import os\n",
     "import seaborn as sns\n",
     "from matplotlib.ticker import FuncFormatter\n",
+    "file1 = \"all_papers_labeled_2017_2018.csv\"\n",
+    "file2 = \"all_papers_labeled_2019_2021.csv\"\n",
+    "file3 = \"all_papers_labeled_2022_2024.csv\"\n",
     "\n",
+    "df1 = pd.read_csv(file1)\n",
+    "df2 = pd.read_csv(file2)\n",
+    "df3 = pd.read_csv(file3)\n",
     "\n",
-    "data = pd.read_csv(\"filtered_data.csv\")"
+    "data = pd.concat([df1, df2, df3], ignore_index=True)\n",
+    "\n",
+    "len_before_processing = len(data)\n",
+    "\n",
+    "filtered_data = data[data['language'] == 'en']\n",
+    "\n",
+    "#  \"soccer\" or \"football\" in the abstract\n",
+    "filtered_data['mention_count'] = filtered_data['abstract'].str.count(r'\\bsoccer\\b|\\bfootball\\b', flags=re.IGNORECASE)\n",
+    "\n",
+    "#  \"soccer\" or \"football\" is mentioned in the title\n",
+    "filtered_data['title_match'] = filtered_data['title'].str.contains(r'\\bsoccer\\b|\\bfootball\\b', flags=re.IGNORECASE)\n",
+    "\n",
+    "def filter_concepts(concepts_column):\n",
+    "    concepts_list = ast.literal_eval(concepts_column) if isinstance(concepts_column, str) else concepts_column\n",
+    "    return any(\n",
+    "        ('football' in concept['display_name'].lower() or 'soccer' in concept['display_name'].lower()) \n",
+    "        and concept['score'] > 0.2 \n",
+    "        for concept in concepts_list\n",
+    "    )\n",
+    "\n",
+    "filtered_data['concepts_match'] = filtered_data['concepts'].apply(filter_concepts)\n",
+    "\n",
+    "filtered_data['keep'] = (\n",
+    "    (filtered_data['mention_count'] > 2) |  # At least 2 mentions in the abstract\n",
+    "    (filtered_data['concepts_match']) |      # Match in the concepts with score > 0.2\n",
+    "    (filtered_data['title_match'])           # Mention in the title\n",
+    ")\n",
+    "filtered_data = filtered_data[filtered_data['keep']==True]\n",
+    "filtered_data.to_csv(\"filtered_data.csv\", index=False)\n",
+    "print(f\"Kept {int((len(filtered_data)/len_before_processing)*100)}% of original data\")\n",
+    "\n"
    ]
   },
   {
@@ -45,6 +81,8 @@
     }
    ],
    "source": [
+    "data = filtered_data\n",
+    "\n",
     "my_export = {\n",
     "    \"results\": []\n",
     "}\n",
